--- a/double-pendulum-sim/Double-pendulum-sim/Double-pendulum-sim.vcxproj
+++ b/double-pendulum-sim/Double-pendulum-sim/Double-pendulum-sim.vcxproj
@@ -119,10 +119,11 @@
       <AdditionalIncludeDirectories>$(SolutionDir)Libraries\raylib-3.7\include;$(SolutionDir)Libraries\raygui-2.8\src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)Libraries\raylib-3.7\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>raylibdll.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -136,12 +137,13 @@
       <AdditionalIncludeDirectories>$(SolutionDir)Libraries\raylib-3.7\include;$(SolutionDir)Libraries\raygui-2.8\src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)Libraries\raylib-3.7\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>raylibdll.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
